--- a/css/mwin_style.css
+++ b/css/mwin_style.css
@@ -23,18 +23,21 @@
 	z-index:99999;
 }
 #mwin_close {
+	width:20px;
+	height:20px;
 	position: absolute;
 	right: 10px;
 	top: 10px;
 	z-index:99999;
 	cursor: pointer;
 }
+#mwin_img_close { width: 20px; height: 20px; opacity: 0.5; }
 
 /* WINDOW STYLE */
 .window {
 	/* GENERAL STYLE */
 	display: none;
-	position: relative;
+	position: absolute;
 	z-index: 99999;
 	top: 0; left: 0;
 	margin: 0 auto;
