--- a/css/mwin_style.css
+++ b/css/mwin_style.css
@@ -31,7 +31,11 @@
 	z-index:99999;
 	cursor: pointer;
 }
-#mwin_img_close { width: 20px; height: 20px; opacity: 0.5; }
+#mwin_img_close {
+	width: 20px;
+	height: 20px;
+	opacity: 0.5;
+}
 
 /* WINDOW STYLE */
 .window {
@@ -44,9 +48,8 @@
 	
 	/* OTHER STYLE */
 	background: #fff;
-	width: 300px;
-	height: 250px;
-	padding: 10px;
+	width: 600px;
+	height: 600px;
 	-webkit-box-shadow: 0 4px 23px 5px rgba(0, 0, 0, 0.2), 0 2px 6px rgba(0,0,0,0.15);
 	-moz-box-shadow: 0 4px 23px 5px rgba(0, 0, 0, 0.2), 0 2px 6px rgba(0,0,0,0.15);
 	box-shadow: 0 4px 23px 5px rgba(0, 0, 0, 0.2), 0 2px 6px rgba(0,0,0,0.15);
@@ -54,3 +57,7 @@
 	-moz-border-radius: 3px;
 	border-radius: 3px;
 }
+.window .content {
+	padding: 10px;
+}
+
